cards && view modals && fixes

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Andika&display=swap');
+@import './media';
 
 html {
   font-family: 'Andika', sans-serif !important;
@@ -24,4 +25,26 @@ a {
 .v-field__input {
   padding-left: 12px !important;
   padding-right: 12px !important;
+}
+
+.v-container {
+  max-width: 1200px !important;
+}
+
+.content {
+  margin-top: 20px;
+}
+
+.v-card {
+  border-radius: 12px !important;
+
+  &__loader {
+    display: none !important;
+  }
+}
+
+.v-chip,
+.v-chip__content {
+  display: inline-flex !important;
+  align-self: center !important;
 }
