--- a/components/NavBar/NavBar.scss
+++ b/components/NavBar/NavBar.scss
@@ -1,8 +1,14 @@
+@import 'assets/media';
+
 .nav-bar {
-  height: 55px;
-  padding: 12px;
-  background-color: #ececec;
+  height: 74px;
+  padding: 12px 24px;
   color: #000;
+  border: 1px solid #eee;
   font-size: 20px;
   font-weight: 600;
+
+  @include media-sm-up {
+    padding: 12px 48px;
+  }
 }
