--- a/components/PhotoUploader/PhotoUploader.scss
+++ b/components/PhotoUploader/PhotoUploader.scss
@@ -1,18 +1,36 @@
+@import 'assets/media';
+
 .photo-uploader {
   &__input {
     display: flex;
-    align-items: center;
+    flex-direction: column;
     gap: 6px;
+    margin-bottom: 12px;
+
+    @include media-sm-up {
+      align-items: center;
+      flex-direction: row;
+      margin-bottom: 0;
+    }
+  }
+
+  &__added {
+    display: block;
   }
 
   &__photo {
-    display: flex !important;
-    align-items: center;
     width: fit-content;
     margin: 8px 0;
   }
 
+  &__add {
+    width: fit-content;
+  }
+
   &__photo-delete {
+    display: flex;
+    align-items: center;
+    color: #ff5252;
     background: none;
     box-shadow: none;
     margin-left: 6px;
