--- a/components/modals/DrinkModal/DrinkModal.scss
+++ b/components/modals/DrinkModal/DrinkModal.scss
@@ -12,4 +12,28 @@
       border-radius: 0 !important;
     }
   }
+
+  &__chip {
+    width: fit-content;
+  }
+
+  &__chips {
+    display: flex;
+    margin-bottom: 12px;
+  }
+
+  &__discount {
+    display: flex;
+    align-items: baseline;
+    gap: 6px;
+  }
+
+  &__discount-without {
+    text-decoration: line-through;
+    font-size: 16px;
+  }
+
+  &__discount-with {
+    margin-bottom: 0;
+  }
 }
