a lot of changes

--- a/components/modals/DrinkModal/DrinkModal.scss
+++ b/components/modals/DrinkModal/DrinkModal.scss
@@ -17,6 +17,10 @@
     width: fit-content;
   }
 
+  &__size {
+    font-size: 12px;
+  }
+
   &__chips {
     display: flex;
     margin-bottom: 12px;
