--- a/components/modals/DrinkModal/DrinkModal.scss
+++ b/components/modals/DrinkModal/DrinkModal.scss
@@ -26,6 +26,10 @@
     margin-bottom: 12px;
   }
 
+  &__description {
+    margin-bottom: 8px;
+  }
+
   &__discount {
     display: flex;
     align-items: baseline;
@@ -39,5 +43,9 @@
 
   &__discount-with {
     margin-bottom: 0;
+  }
+
+  &__characteristics {
+    margin-top: 12px;
   }
 }
