--- a/components/SnackCard/SnackCard.scss
+++ b/components/SnackCard/SnackCard.scss
@@ -10,4 +10,16 @@
     font-weight: 700;
     margin-bottom: 12px;
   }
+
+  &__description {
+    font-size: 16px;
+    margin-top: 6px;
+    margin-bottom: 12px;
+    line-height: 1.75rem;
+    letter-spacing: 0.009375em;
+  }
+
+  &__location {
+    width: fit-content;
+  }
 }
