--- a/components/modals/SnackModal/SnackModalBody/SnackModalBody.scss
+++ b/components/modals/SnackModal/SnackModalBody/SnackModalBody.scss
@@ -4,4 +4,10 @@
     align-items: center;
     gap: 6px;
   }
+
+  &__price {
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 12px;
+  }
 }
